Implementation of Keys, Hash generation added

--- a/blockChainWebApp.API/blockChainWebApp.API.csproj
+++ b/blockChainWebApp.API/blockChainWebApp.API.csproj
@@ -46,10 +46,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BouncyCastle.Crypto, Version=1.8.2.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
+      <HintPath>..\packages\BouncyCastle.1.8.2\lib\BouncyCastle.Crypto.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -155,7 +159,9 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="BLL\HelpClasses\Base58Encoding.cs" />
     <Compile Include="BLL\HelpClasses\StringUtil.cs" />
+    <Compile Include="BLL\KeyServices.cs" />
     <Compile Include="Controllers\BlockController.cs" />
     <Compile Include="DAL\BlockRepository.cs" />
     <Compile Include="Global.asax.cs">
